# diffusion-problem

./: CMakeLists.txt  README.md
include/lib/: Q4.hpp  eigen.hpp  mesh.hpp  print.hpp  sparse_matrix.hpp  window.hpp
scripts/: Q4S.py
src/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp  test4.cpp
src/lib/: CMakeLists.txt  Q4.cpp  eigen.cpp  mesh.cpp  sparse_matrix.cpp  window.cpp
